--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
             <h1>Guessed Letterz:</h1>
             <p id="guessedLetterz"></p>
-       
+              <p id="wins">Wins: </p>
               <br>
               <p id="currentWord">"TYPE HERE"</p>
             <br>
