--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <h1>Guessed Letterz:</h1>
             <p id="guessedLetterz"></p>
               <p id="wins">Wins: </p>
+              <p id="losses">Losses: </p>
               <br>
               <p id="currentWord">"TYPE HERE"</p>
             <br>
